<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activ.RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/armenia"

        />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_margin="120dp"
        app:srcCompat="@drawable/user1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"

        >

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@color/texthint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@color/texthint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@color/texthint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Surname"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@color/texthint"
            android:textSize="18sp" />


        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_orange_light"
            android:hint="@string/edt_masked_custom_mobile_hint"
            android:inputType="phone"
            android:textColorHint="@color/texthint"
            app:mask="(###)##-###-###" />


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@android:color/black"
            android:alpha="0.6"
            android:text="@string/save" />


    </LinearLayout>


</RelativeLayout>